fixed image aspect ratio on small screens
maintain image aspect ratio in flexbox, using align-self: center

--- a/css/styles.css
+++ b/css/styles.css
@@ -1158,4 +1158,5 @@ Responsive
 /* Responsive images */
 .disp1 {
 	max-width: 100%;
+	align-self: center;
 }
